# ZippyAgent

./: .gitignore  CONTRIBUTING.md  Start-Chroma.ps1  TOOLS_LAUNCHER_README.md  chroma_server.py  tools.json  zippy-agent-monitor-app.code-workspace
.github/workflows/: ci.yml
apps/agent-monitor/: DELIVERY_SETUP_SUMMARY.md  README.md  executive_summary_and_vision.md  index.html  package-lock.json  package.json  vite.config.ts
apps/agent-monitor/docs/: stakeholder-guide.md
apps/agent-monitor/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-monitor/src-tauri/src/: llm_service.rs  main.rs  model_db.rs  tool_launcher.rs
apps/agent-monitor/src-tauri/src-tauri/: Cargo.toml
apps/agent-monitor/src-tauri/src-tauri/src/: main.rs
apps/agent-monitor/src-tauri/src/tests/: llm_tests.rs  mod.rs  model_db_tests.rs
config/: zippyagent.yaml
docs/: AI Agent Ideas.md  active-todo-list.md  ai_agent_platform_prd.md  setup-automated-delivery.md
docs/architecture/: current_state.md  overview.md
docs/ideas/: README.md  TEMPLATE.idea.md
infra/: docker-compose.yml
reports/: agent_status_2025-07-15.md
scripts/: .env.example  Get-ZippyConfig.ps1  Zippy.RepoHarvest.psd1  Zippy.RepoHarvest.psm1  create_jira_tickets.py  orchestrate-agents.ps1  test-module.ps1
scripts/tool-launcher/: Launch-Bolt.ps1  Launch-Cursor.ps1  Launch-Tool.ps1  Launch-Warp.ps1
src/ZippyAgent/: ZippyAgent.psd1  ZippyAgent.psm1
src/orchestrator-generator/: DashboardManager.ps1  OrchestratorGenerator.ps1  example-config.json
venv-chroma/: pyvenv.cfg
venv-chroma/Scripts/: activate  activate.bat
(+16 files in other folders)
