[package]
name = "zippycoin-agent-monitor"
version = "0.1.0"
description = "A Tauri App for monitoring ZippyCoin agents"
authors = ["ZippyCoin Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "fs-all", "process-all", "http-all"] }
tauri-plugin-sql = { version = "0.3", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
unzip = "0.2"
tempfile = "3.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
